k8s-kurulum/manifests/namespaces/jenkins/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
