k8s-kurulum/manifests/namespaces/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.tislemler.tislemler.com.tr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-operator-http-jenkins
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress-slave
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins-slave.tislemler.tislemler.com.tr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-operator-slave-jenkins
                port:
                  number: 50000
